fix: mobile layout issues

--- a/docs/src/styles/docs/header.scss
+++ b/docs/src/styles/docs/header.scss
@@ -9,7 +9,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  padding: var(--amplify-space-small) var(--amplify-space-xl);
+  padding: var(--amplify-space-small) var(--amplify-space-large);
 
   @media (min-width: 62rem) {
     justify-content: space-between;
@@ -35,19 +35,26 @@
   }
 }
 
-// .docs-nav {
-//   flex-grow: 1;
-// }
-
-.docs-nav,
 .docs-settings {
+  //Hide docs settings in mobile dropdown
+  .docs-header-mobile-nav & {
+    display: none;
+  }
+
+  // Hide theme color mode switcher on mobile
+  @media (max-width: 768px) {
+    .docs-settings__color-switcher {
+      display: none;
+    }
+  }
+}
+.docs-nav {
   display: none;
 
   @media (min-width: 62rem) {
     display: flex;
     padding: 0 var(--amplify-space-medium);
   }
-
   .docs-header-mobile-nav & {
     display: flex;
     width: 100%;
@@ -68,6 +75,13 @@
   font-weight: 500;
   /* why do I need to do this? */
   cursor: pointer;
+
+  // Logo should grow to take the most space on mobile header
+  @media (max-width: 991px) {
+    & {
+      flex-grow: 1;
+    }
+  }
 }
 
 [data-amplify-theme] .docs-nav-link:hover {
